--- a/src/src-web/404.html
+++ b/src/src-web/404.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
     <link rel="stylesheet" href="style404.css">
+    <link rel="shortcut icon" href="zdjecia/LogoMakr.png">
 </head>
 
 <body>
